force-app/main/default/objects/Employer_Outreach_Opportunity__c/Employer_Outreach_Opportunity__c.object-meta.xml
<CustomObject>
    <label>Employer Outreach Opportunity</label>
    <nameField>
        <label>Employer Outreach Opportunity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employer Outreach Opportunities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>