force-app/main/default/objects/Employer_Outreach_Opportunity__c/fields/Date_Notes_Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>Date_Notes_Last_Updated__c</fullName>
    <label>Date Notes Last Updated</label>
    <type>Date</type>
</CustomField>