force-app/main/default/objects/Employer_Outreach_Opportunity__c/fields/Employer__c.field-meta.xml
<CustomField>
    <fullName>Employer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Employer Outreach Opportunities</relationshipLabel>
    <relationshipName>Employer_Outreach_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>