force-app/main/default/objects/Employer_Outreach_Opportunity__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <label>Notes</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>