force-app/main/default/objects/Employer_Outreach_Opportunity__c/fields/Notes_Updated_By__c.field-meta.xml
<CustomField>
    <fullName>Notes_Updated_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Notes Updated By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Employer_Outreach_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>