force-app/main/default/objects/Employer_Outreach_Opportunity__c/fields/Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Employer Outreach Opportunities</relationshipLabel>
    <relationshipName>Employer_Outreach_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>