force-app/main/default/objects/Employer_Outreach_Opportunity__c/listViews/EOO_Updated_By_Provider_Today.listView-meta.xml
<ListView>
    <fullName>EOO_Updated_By_Provider_Today</fullName>
    <columns>NAME</columns>
    <columns>Notes_Updated_By__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Date_Notes_Last_Updated__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>EOO Updated By Provider Today</label>
</ListView>