force-app/main/default/objects/Employer_Outreach_Opportunity__c/listViews/My_Employer_Outreach_Opportunities.listView-meta.xml
<ListView>
    <fullName>My_Employer_Outreach_Opportunities</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>My Employer Outreach Opportunities</label>
</ListView>