force-app/main/default/objects/Employer_Outreach_Opportunity__c/listViews/New_Employer_Outreach_Opportunities_Employer_Outreach_Opportunity.listView-meta.xml
<ListView>
    <fullName>New_Employer_Outreach_Opportunities_Employer_Outreach_Opportunity</fullName>
    <columns>NAME</columns>
    <columns>Fee_Schedule__c</columns>
    <columns>Out_of_Network_Deductible__c</columns>
    <filterScope>Queue</filterScope>
    <label>New Employer Outreach Opportunities</label>
    <queue>New_Employer_Outreach_Opportunities</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>